<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina5_9" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ToDoListItems" customModule="To_Do_List_Realm" customModuleProvider="target">
            <connections>
                <outlet property="editDoneButton" destination="R3L-1A-jUs" id="Daf-7E-F3y"/>
                <outlet property="tableView" destination="TQI-fn-IGL" id="ZKb-ZZ-FNo"/>
                <outlet property="toDoListNameTextField" destination="0OC-NB-2AY" id="YUd-eB-j9q"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRj-Mo-zCP">
                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                    <subviews>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0OC-NB-2AY" userLabel="To Do List Name Text Field">
                            <rect key="frame" x="22" y="15" width="330" height="30"/>
                            <accessibility key="accessibilityConfiguration" label="ToDoListNameTextField"/>
                            <nil key="textColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" textContentType="name"/>
                            <connections>
                                <outlet property="delegate" destination="-1" id="HG1-mI-CnI"/>
                            </connections>
                        </textField>
                    </subviews>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <constraints>
                        <constraint firstAttribute="trailing" secondItem="0OC-NB-2AY" secondAttribute="trailing" constant="23" id="E3J-By-jDD"/>
                        <constraint firstAttribute="bottom" secondItem="0OC-NB-2AY" secondAttribute="bottom" constant="15" id="gdu-R7-dIa"/>
                        <constraint firstItem="0OC-NB-2AY" firstAttribute="leading" secondItem="lRj-Mo-zCP" secondAttribute="leading" constant="22" id="q0f-9k-L4n"/>
                    </constraints>
                </view>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TQI-fn-IGL">
                    <rect key="frame" x="0.0" y="60" width="375" height="672"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <connections>
                        <outlet property="dataSource" destination="-1" id="mFO-8s-rE7"/>
                        <outlet property="delegate" destination="-1" id="ojP-az-evc"/>
                    </connections>
                </tableView>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="BJf-pE-cDE">
                    <rect key="frame" x="0.0" y="732" width="375" height="50"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8wC-qg-rjr" userLabel="AddToDoListItemButton">
                            <rect key="frame" x="0.0" y="0.0" width="186.66666666666666" height="50"/>
                            <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <accessibility key="accessibilityConfiguration" label="AddToDoListItemButton"/>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                            <state key="normal" title="+">
                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </state>
                            <connections>
                                <action selector="addToDoListItemButtonTapped:" destination="-1" eventType="touchUpInside" id="vpF-Ke-7L1"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3L-1A-jUs" userLabel="EditDoneButton">
                            <rect key="frame" x="188.66666666666663" y="0.0" width="186.33333333333337" height="50"/>
                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                            <accessibility key="accessibilityConfiguration" label="EditDoneButton_"/>
                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
                            <state key="normal" title="Edit">
                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </state>
                            <connections>
                                <action selector="editDoneButtonTapped:" destination="-1" eventType="touchUpInside" id="ctx-1J-ko0"/>
                            </connections>
                        </button>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="uVc-HF-mJv"/>
                    </constraints>
                </stackView>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="TQI-fn-IGL" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6hq-Be-wM7"/>
                <constraint firstAttribute="trailing" secondItem="lRj-Mo-zCP" secondAttribute="trailing" id="EXC-RG-XIp"/>
                <constraint firstItem="TQI-fn-IGL" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="Gra-vg-0EP"/>
                <constraint firstAttribute="trailing" secondItem="BJf-pE-cDE" secondAttribute="trailing" id="QnR-SV-k4c"/>
                <constraint firstItem="TQI-fn-IGL" firstAttribute="top" secondItem="lRj-Mo-zCP" secondAttribute="bottom" id="TcK-9b-epV"/>
                <constraint firstAttribute="bottom" secondItem="TQI-fn-IGL" secondAttribute="bottom" constant="80" id="XpI-Aw-dIu"/>
                <constraint firstItem="lRj-Mo-zCP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aYd-JH-w8w"/>
                <constraint firstItem="BJf-pE-cDE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bzO-1D-pis"/>
                <constraint firstAttribute="trailing" secondItem="TQI-fn-IGL" secondAttribute="trailing" id="gG3-lG-m1f"/>
                <constraint firstItem="lRj-Mo-zCP" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="xRZ-gg-wQT"/>
                <constraint firstItem="BJf-pE-cDE" firstAttribute="top" secondItem="TQI-fn-IGL" secondAttribute="bottom" id="xoe-Hp-gjH"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <point key="canvasLocation" x="25.5" y="52"/>
        </view>
    </objects>
</document>
