...
    //----------------------------------------------------------------------//
    // MARK: IBActions
    //----------------------------------------------------------------------//
    
    @IBAction func addToDoListButtonTapped(_ sender: UIButton)
    {
        let alert = UIAlertController(title: "Enter to do list name:",
                                      message: "",
                                      preferredStyle: .alert)
        
        alert.addTextField
        {
            (textField) in
            textField.placeholder = "To Do List name"
            textField.autocapitalizationType = .sentences
        }
        
        let addAction = UIAlertAction(title: "Add", style: .default, handler:
        {
            [unowned self](alert_) -> Void in
...
